# SAUTE-feature-selection

./: README.md  pyproject.toml
codes/pl_algorithms/: helpers.py  ipal.py  knn.py  model.py  saute.py  saute_selector.py
data/lost/: X.csv  y.csv  y_pl.csv
src/pl_algorithms/: __init__.py  helpers.py  ipal.py  knn.py  model.py  saute.py
vignettes/: guide.ipynb  test.ipynb
